v1.1.0/modules/schema/pages/class/TransformerStarImpedance.adoc
= `TransformerStarImpedance`
:toclevels: 4


+++Transformer star impedance (Pi-model) that accurately reflects impedance for transformers with 2 or 3 windings. For transformers with 4 or more windings, TransformerMeshImpedance class shall be used.
For transmission networks use PowerTransformerEnd impedances (r, r0, x, x0, b, b0, g and g0).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransformerStarImpedance`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TransformerStarImpedance`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<TransformerEnd,`TransformerEnd`>>
//| [[slots_table.TransformerEnd]]<<TransformerEnd,`TransformerEnd`>>
| 0..* +
xref::class/TransformerEnd.adoc[`TransformerEnd`]
| +++All transformer ends having this star impedance.+++
| _n/a_

| <<TransformerEndInfo,`TransformerEndInfo`>>
//| [[slots_table.TransformerEndInfo]]<<TransformerEndInfo,`TransformerEndInfo`>>
| 0..1 +
xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]
| +++Transformer end datasheet used to calculate this transformer star impedance.+++
| _n/a_

| <<r,`r`>>
//| [[slots_table.r]]<<r,`r`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Resistance of the transformer end.+++
| _n/a_

| <<r0,`r0`>>
//| [[slots_table.r0]]<<r0,`r0`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Zero sequence series resistance of the transformer end.+++
| _n/a_

| <<x,`x`>>
//| [[slots_table.x]]<<x,`x`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Positive sequence series reactance of the transformer end.+++
| _n/a_

| <<x0,`x0`>>
//| [[slots_table.x0]]<<x0,`x0`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Zero sequence series reactance of the transformer end.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#r]
=== `r`
+++Resistance of the transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerStarImpedance.r`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.r,&#10548;>>
--
////


//[discrete]
[#r0]
=== `r0`
+++Zero sequence series resistance of the transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerStarImpedance.r0`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.r0,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TransformerEnd]
=== `TransformerEnd`
+++All transformer ends having this star impedance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerStarImpedance.TransformerEnd`
| Cardinality
| 0..*
| Type
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.TransformerEnd,&#10548;>>
--
////


//[discrete]
[#TransformerEndInfo]
=== `TransformerEndInfo`
+++Transformer end datasheet used to calculate this transformer star impedance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerStarImpedance.TransformerEndInfo`
| Cardinality
| 0..1
| Type
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.TransformerEndInfo,&#10548;>>
--
////


//[discrete]
[#x]
=== `x`
+++Positive sequence series reactance of the transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerStarImpedance.x`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.x,&#10548;>>
--
////


//[discrete]
[#x0]
=== `x0`
+++Zero sequence series reactance of the transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerStarImpedance.x0`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.x0,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/TransformerEnd.adoc[`TransformerEnd`] | xref::class/TransformerEnd.adoc#StarImpedance[`StarImpedance`]



| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`] | xref::class/TransformerEndInfo.adoc#TransformerStarImpedance[`TransformerStarImpedance`]


|===

